--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=oxefood-api-wendel
+spring.application.name=oxefood-api-seunome
+
 server.port=8080
 spring.config.import=optional:file:.env[.properties]
 
-#aa
 # Datasource ( levantando a aplicação sem container )
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5439/oxefood
+spring.datasource.url=jdbc:postgresql://localhost:5435/oxefood
 spring.datasource.username=postgres
 spring.datasource.password=oxefood
 
@@ -16,3 +16,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.generate-ddl=true
+
